# rclone-lambda-sync

./: .env.example  .gitignore  .markdownlint.yaml  .npmignore  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  lambda_function.py  lambda_types.py  package-lock.json  package.json  pyproject.toml  rclone_lambda_daily.yaml  serverless.yaml
.github/workflows/: lint.yaml  linting.yaml
