[tool.poetry]
name = "rclone-lambda-sync"
version = "3.0.0"  # Same version in package.json
description = ""
authors = ["Ayaz Badouraly <badouralix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
python-json-logger = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
boto3 = "^1.25.1"
boto3-stubs = {extras = ["ssm"], version = "^1.25.1"}
ddtrace = "^1.5.2"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
