[tool.poetry]
name = "rclone-lambda-sync"
version = "3.1.0"  # Same version in package.json
description = ""
authors = ["Ayaz Badouraly <badouralix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
boto3 = "^1.26.104"
boto3-stubs = {extras = ["ssm"], version = "^1.26.104"}
ddtrace = "^1.10.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
