[tool.poetry]
name = "rclone-lambda-sync"
version = "3.3.0"  # Same version in package.json
description = ""
authors = ["Ayaz Badouraly <badouralix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.11"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
boto3 = "^1.28.21"
boto3-stubs = {extras = ["ssm"], version = "^1.28.21"}
ddtrace = "^1.17.3"
flake8 = "^6.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
